# llm-playground

./: .env.example  .gitignore  PRODUCTION.md  README.md  pyproject.toml  raw_calls.md
app/: main.py
app/api/: routes.py
app/core/: config.py
app/schemas/: prompt.py
app/services/: llm_client.py
